[package]
name = "cloudflare-e2e-test"
version = "0.5.0"
edition = "2021"
description = "End-to-end tests of the Cloudflare Rust API client"
license = "BSD-3-Clause"

[[bin]]
name = "cloudflare-e2e-test"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["env"] }
cloudflare = { path = "../cloudflare" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.145"
rand = "0.9.2"
