[package]
name = "cloudflare-examples"
version = "0.6.0"
edition = "2021"
description = "Examples of how to use the Cloudflare Rust API client"
license = "BSD-3-Clause"
rust-version = "1.56.0"

[[bin]]
name = "cloudflare-examples"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.5", features = ["env"] }
cloudflare = { path = "../cloudflare", features = ["blocking", "mockito"] }
mockito = "1.1"
serde = { version = "1.0" }
serde_json = "1.0"
